# snake-game-world

./: .dockerignore  .gitignore  AGENTS.md  DOCKER.md  Dockerfile  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  snake_game.db
backend/app/: database.py  main.py  models.py  seed_db.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/routers/: auth.py  games.py  leaderboard.py  users.py
backend/tests/: test_api.py
backend/tests_integration/: README.md  conftest.py  test_auth.py  test_games.py  test_leaderboard.py  test_users.py
frontend/: .dockerignore  .env.production  nginx.conf  package-lock.json  package.json
frontend/src/: index.css
frontend/src/api/: mockApi.ts
frontend/src/components/: Leaderboard.test.tsx  Leaderboard.tsx
frontend/src/components/game/: GameBoard.test.tsx  GameOverModal.tsx
frontend/src/hooks/: useAuth.test.ts  useSnakeGame.test.ts
frontend/src/lib/: utils.test.ts
frontend/src/pages/: Index.test.tsx  Index.tsx
src/components/: Header.tsx  LiveGames.tsx  WatchGame.tsx
src/components/auth/: AuthModal.tsx
src/components/game/: GameBoard.tsx  GameControls.tsx  ModeSelector.tsx
src/components/ui/: button.tsx
src/hooks/: useAuth.ts  useSnakeGame.ts
